<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" android:layout_weight="5">
-->
    <TableLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1" android:layout_margin="5dp">
        <TableRow android:id="@+id/nameTableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView android:id="@+id/nameLabelTextView"
                android:text="@string/label_name"  android:paddingTop="10dp" android:textSize="15sp"></TextView>
            <TextView android:id="@+id/nameTextView" android:paddingTop="10dp" android:textColor="@android:color/black" android:textSize="15sp" >
            </TextView>
        </TableRow>



        <TableRow android:id="@+id/dateTimeTableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView android:id="@+id/dateTimeLabelTextView"
                android:text="@string/label_dateTime"  android:paddingTop="10dp" android:textSize="15sp"></TextView>
            <TextView android:id="@+id/dateTimeTextView"
                android:paddingTop="10dp" android:textSize="15sp" android:textColor="@android:color/black" ></TextView>
        </TableRow>


        <TableRow android:id="@+id/locationTableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView android:id="@+id/locationLabelTextView"
                android:text="@string/label_location"  android:paddingTop="10dp" android:textSize="15sp"></TextView>
            <TextView android:id="@+id/locationTextView" android:textColor="@android:color/black" android:paddingTop="10dp" android:textSize="15sp" ></TextView>
        </TableRow>
    </TableLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <!-- This can go anywhere in your layout (see other demos for some examples). -->
        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            class="com.google.android.gms.maps.SupportMapFragment"/>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:background="#D000"
            android:orientation="vertical"
            android:padding="5dp">
            <Button
                android:id="@+id/get_my_location_button"
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="showMyLocation"
                android:text="@string/my_location"/>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
